@@ -158,11 +158,11 @@
         <version>${spring-boot.version}</version>
       </plugin>
 
-      <!--Plugin JaCoCo añadido -->
+      <!--Plugin JaCoCo actualizado para Java 21 -->
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.8.8</version>
+        <version>0.8.11</version>
         <executions>
           <execution>
             <goals>
@@ -177,6 +177,19 @@
             </goals>
           </execution>
         </executions>
+      </plugin>
+
+      <!-- Configuración adicional para Surefire con Java 21 -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.0.0-M7</version>
+        <configuration>
+          <argLine>@{argLine} --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+          <useSystemClassLoader>false</useSystemClassLoader>
+          <forkCount>1</forkCount>
+          <reuseForks>false</reuseForks>
+        </configuration>
       </plugin>
 
     </plugins>
